--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,19 @@
 {
-    "name": ":vendor/:package_slug",
-    "description": ":package_description",
+    "name": "esing/inline-editing",
+    "description": "use inline editing for text and translations",
     "keywords": [
-        ":vendor",
-        ":package_name"
+        "esign",
+        "laravel",
+        "inline",
+        "editing"
     ],
-    "homepage": "https://github.com/:vendor/:package_slug",
+    "homepage": "https://github.com/Esign/InlineEditing",
     "license": "MIT",
     "type": "library",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
+            "name": "Tijl CLottemans",
+            "email": "tijlclottemans@gmail.com",
             "role": "Developer"
         }
     ],
@@ -26,12 +28,12 @@
     },
     "autoload": {
         "psr-4": {
-            ":vendor_namespace_escaped\\": "src"
+            "Esign\\InlineEditing\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            ":vendor_namespace_escaped\\Tests\\": "tests"
+            "Esign\\InlineEditing\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -44,11 +46,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                ":vendor_namespace_escaped\\:studly_package_nameServiceProvider"
-            ],
-            "aliases": {
-                ":studly_package_name": ":vendor_namespace_escaped\\Facades\\:studly_package_nameFacade"
-            }
+                "Esign\\InlineEditing"
+            ]
         }
     },
     "minimum-stability": "dev",
