fixed name typo

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "esing/inline-editing",
+    "name": "esign/inline-editing",
     "description": "use inline editing for text and translations",
     "keywords": [
         "esign",
