--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
     "autoload": {
         "psr-4": {
             "Esign\\InlineEdit\\": "src"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
